--- a/tests/PluginLibrary.Tests/PluginLibrary.Tests.csproj
+++ b/tests/PluginLibrary.Tests/PluginLibrary.Tests.csproj
@@ -40,6 +40,7 @@
     <OutputPath>bin\MonoRelease\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
